Implemented functioning mailer in dev

--- a/app/views/user_mailer/welcome_email.html.erb
+++ b/app/views/user_mailer/welcome_email.html.erb
@@ -1,1 +1,7 @@
-<p> success</p>
+<h1>Hey,</h1>
+<p>
+  Welcome to our site!
+</p>
+<p>
+  To login to the site, just follow the link: <%= @url %>.
+</p>
